# hearsay

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py
api/hearsay_api/: __init__.py  app_state.py  audio.py  auth.py  config.py  db.py  logging.py  main.py  metrics.py  models.py  queue.py  schemas.py  storage.py
api/hearsay_api/engines/: __init__.py  base.py  local_client.py  placement.py  runpod_client.py
api/hearsay_api/routers/: __init__.py  health.py  jobs.py  metrics_routes.py  openai_compat.py  realtime.py  voices.py
api/tests/: __init__.py  conftest.py  test_app_state_and_db.py  test_audio.py  test_auth.py  test_config.py  test_engines_base.py  test_engines_clients.py  test_logging.py  test_main.py  test_metrics.py  test_queue.py  test_realtime.py  test_routes_health_metrics.py  test_routes_jobs.py  test_routes_openai.py  test_routes_voices.py  test_storage.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  metrics.test.ts  metrics.ts  types.ts
frontend/src/audio/: pcm.test.ts  pcm.ts
frontend/src/components/: ApiKeyBar.test.tsx  ApiKeyBar.tsx  LiveMic.test.tsx  LiveMic.tsx
frontend/src/pages/: JobsPage.test.tsx  JobsPage.tsx  MetricsPage.test.tsx  MetricsPage.tsx  SttPage.test.tsx  SttPage.tsx  TtsPlayground.test.tsx  TtsPlayground.tsx  VoiceLibrary.test.tsx  VoiceLibrary.tsx
frontend/src/test/: setup.ts
gpu/: Dockerfile  pyproject.toml
gpu/hearsay_gpu/: __init__.py  audio.py  config.py  logging.py  main.py  manager.py  realtime.py
gpu/hearsay_gpu/models/: __init__.py  base.py  chatterbox_model.py  diarization.py  kokoro_model.py  vad.py  whisper_model.py
gpu/tests/: __init__.py  conftest.py  test_audio.py  test_logging.py  test_main.py  test_manager.py  test_models.py  test_realtime.py
