[project]
name = "hearsay-api"
version = "1.0.0"
description = "Hearsay API gateway: REST + WebSocket TTS/STT platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "websockets>=12.0",
    "prometheus-client>=0.20",
    "boto3>=1.34",
    "pynvml>=11.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.4",
    "boto3-stubs[s3]>=1.34",
    "asgi-lifespan>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hearsay_api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=hearsay_api --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
concurrency = ["thread", "greenlet"]
omit = ["hearsay_api/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: FastAPI uses Depends()/Query()/Header() as argument defaults by design.
# B024: Engine is an interface base whose methods raise NotImplementedError so
#       subclasses can selectively override (not classic @abstractmethod).
ignore = ["B008", "B024"]

[tool.black]
line-length = 100
target-version = ["py312"]
