[project]
name = "hearsay-gpu"
version = "1.0.0"
description = "Hearsay GPU daemon: warm TTS/STT models in VRAM with an RPC server."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "websockets>=12.0",
    # Heavy model libraries (installed in the GPU image):
    "faster-whisper>=1.0",
    "kokoro>=0.7",
    "chatterbox-tts>=0.1",
    "pyannote.audio>=3.1",
    "numpy>=1.26",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hearsay_gpu*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=hearsay_gpu --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
